[package]
name = "xml-string"
version = "0.0.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "String types for XML"
repository = "https://gitlab.com/lo48576/xml-string"
keywords = ["XML"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]

[badges]
maintenance = { status = "experimental" }
gitlab = { repository = "lo48576/xml-string", branch = "master" }
